<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (C) 2014 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->
<resources>

    <string name="app_name">Lullabies</string>
    <string name="author" translatable="false">by AshomokDev</string>
    <string name="appID" translatable="false">ca-app-pub-5221781428763224~4451105598</string>
    <string name="favorite">Favorite</string>
    <string name="error_no_metadata">Unable to retrieve metadata.</string>
    <string name="browse_genres">Genres</string>
    <string name="browse_genre_subtitle">Songs by genre</string>
    <string name="browse_musics_by_genre_subtitle">%1$s songs</string>
    <string name="random_queue_title">Random music</string>
    <string name="error_no_connection">Cannot connect to server. Please, check your Internet connectivity.</string>
    <string name="error_loading_media">Error Loading Media</string>
    <string name="casting_to_device">Casting to %1$s</string>
    <string name="currently_playing_song">Song currently playing</string>
    <string name="currently_playing_artist">Artist of currently playing song</string>
    <string name="currently_playing_extra_info">Extra info for currently playing song</string>
    <string name="play_item">Play item</string>
    <string name="play_pause">play or pause</string>
    <string name="skip_next">skip to next</string>
    <string name="skip_prev">skip to previous</string>
    <string name="touch_to_cast">Touch to connect to a Google Cast device</string>
    <!-- Use the default receiver. To customize a styled media receiver, you can use
         the css and images under <project-root>/docs/cast_styled_receiver -->
    <string name="cast_application_id" translatable="false">CC1AD845</string>
    <string name="home_title">Home</string>
    <string name="related_content_header">You may also like</string>
    <string name="action_listen">Listen</string>
    <string name="open_content_drawer">Open the main menu</string>
    <string name="close_content_drawer">Close the main menu</string>
    <string name="placeholder_message">This is a placeholder for your application code.</string>
    <string name="drawer_allmusic_title">All Music</string>
    <string name="drawer_playlists_title">Playlists</string>
    <string name="now_playing">Now Playing</string>
    <string name="background_image_str">Background image for album art</string>
    <string name="search_queue_title">Search results</string>
    <string name="no_search_results">No search results.</string>
    <string name="loading">Loading…</string>
    <string name="media_route_menu_title">Play on…</string>
    <string name="nav_header_username">Username</string>
    <string name="animals_lullabies_collection">Animals lullabies collection</string>
    <string name="other_lullabies_collection">Other lullabies collection</string>
    <string name="get_no_ads_forever">Get no ads forever</string>
    <string name="about_app">About app</string>

    <!-- Notificaiton Channel -->
    <string name="notification_channel" translatable="false">UAMP_Channel_ID</string>
    <string name="notification_channel_description" translatable="false">Channel ID for UAMP</string>

    <string name="main_activity_banner" translatable="false">ca-app-pub-5221781428763224/3093632356</string>
    <string name="full_screen_activity_banner" translatable="false">ca-app-pub-5221781428763224/1164543404</string>
    <string name="test_banner" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="error_no_skus">We didn\'t find any SKUs to display</string>
    <string name="error_billing_unavailable">Billing unavailable</string>
    <string name="unknown_error">An unknown error occurred</string>
    <string name="cancel">Cancel</string>
    <string name="buy_ads_free">Buy ads free</string>
    <string name="ads_free_forever">Ads free forever</string>
    <string name="remove_ads">Remove ads</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="rate_app">Rate app</string>
    <string name="home">Home</string>
    <string name="contact_me">Contact me:</string>
    <string name="this_is_free_version">This is a free version with ads</string>
    <string name="ads_free_explanation">Hate ads? We too. \nIf you like this app, please support a developer.</string>
    <string name="privacy_policy_agreement">Privacy Policy agreement</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="privacy_policy_explanation">Using this app you agreed with our Privacy Policy.</string>
    <string name="my_email" translatable="false">ashomokdev@gmail.com</string>
    <string name="version">version</string>
    <string name="copied">Copied</string>
    <string name="buy_paid">Buy ads-free version.</string>
    <string name="thank_you_for_your_support">Thank you for your support!</string>
    <string name="connectivity_error">Connectivity error!</string>
    <string name="exit">Exit</string>
    <string name="exit_dialog_title">Do you want to exit?</string>
    <string name="ok">OK</string>
    <string name="times_app_was_used" translatable="false">times_app_was_used</string>
    <string name="rate_app_dialog_title">Rate app</string>
    <string name="support_us">Do you like the music? \nIf yes, please support us with ★★★★★!</string>
    <string name="later">Later</string>
    <string name="never">Never</string>
    <string name="preferences" translatable="false">preferences</string>
    <string name="ok_sure">OK, sure</string>
    <string name="propose_download_app_package_name" translatable="false">com.ashomok.lullabies_classics</string>
    <string name="propose_download_app_dynamic_link" translatable="false">https://ashomok.page.link/fFWD</string>
    <string name="download_app">Download more lullabies Free</string>
    <string name="our_other_aps">Our other aps</string>
    <string name="download_app_name">Lullaby Classic Music for Kids and Babies Relax 0+</string>
</resources>
