<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:background="@drawable/dialog_shape"
        android:padding="14dp">

        <android.support.v7.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="27dp"
            card_view:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:layout_margin="14dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/ads_free_forever"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorAccent"
                        android:textSize="24sp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_chevron_right_black_24dp"
                        android:tint="@color/colorAccent" />

                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/card_view"
            android:layout_marginTop="14dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="3dp"
                android:layout_marginRight="3dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:text="@string/cancel"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

            <Button
                android:id="@+id/buy_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="3dp"
                android:layout_marginStart="3dp"
                android:layout_weight="1"
                android:background="@color/colorAccent"
                android:text="@string/buy_ads_free"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true">

        <ImageView
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:src="@drawable/circle_solid"
            android:tint="@color/colorPrimary" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            android:src="@drawable/remove_ads" />
    </RelativeLayout>
</RelativeLayout>