<?xml version="1.0" encoding="utf-8"?><!--
Copyright (C) 2014 The Android Open Source Project

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

   http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:fitsSystemWindows="true">

    <ImageView
        android:id="@+id/background_image"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:contentDescription="@string/background_image_str"
        android:scaleType="centerCrop"
        android:layout_above="@id/controllers"/>

    <LinearLayout
        android:id="@+id/controllers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/ads_container_wrapper"
        android:orientation="vertical"
        android:visibility="invisible">

        <RelativeLayout
            android:id="@+id/controllers_seekBar"
            android:layout_width="match_parent"
            android:layout_height="48dp">

            <TextView
                android:id="@+id/startText"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_alignParentStart="true"
                android:layout_marginStart="@dimen/text_view_margin"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:textColor="@color/white" />

            <SeekBar
                android:id="@+id/seekBar1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_toStartOf="@+id/endText"
                android:layout_toEndOf="@+id/startText" />

            <TextView
                android:id="@+id/endText"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_alignWithParentIfMissing="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="@dimen/end_text_margin"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:textColor="@color/white" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/controllers_buttons"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/prev"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?selectableItemBackgroundBorderless"
                android:contentDescription="@string/skip_prev"
                android:src="@drawable/ic_skip_previous_white_48dp" />

            <ImageView
                android:id="@+id/play_pause"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="?selectableItemBackgroundBorderless"
                android:contentDescription="@string/play_pause"
                android:src="@drawable/uamp_ic_play_arrow_white_48dp" />

            <ImageView
                android:id="@+id/next"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?selectableItemBackgroundBorderless"
                android:contentDescription="@string/skip_next"
                android:src="@drawable/ic_skip_next_white_48dp" />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/media_info"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/controllers"
        android:background="@drawable/fullscreen_bg_gradient">

        <TextView
            android:id="@+id/line1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="center_horizontal"
            android:maxLines="1"
            android:shadowColor="@android:color/black"
            android:shadowRadius="20"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/fullscreen_line_color" />

        <TextView
            android:id="@+id/line2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/line1"
            android:ellipsize="end"
            android:fontFamily="sans-serif-light"
            android:gravity="center_horizontal"
            android:maxLines="1"
            android:shadowColor="@android:color/black"
            android:shadowRadius="20"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/fullscreen_secondary_line_color" />

        <TextView
            android:id="@+id/line3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/line2"
            android:ellipsize="end"
            android:fontFamily="sans-serif-light"
            android:gravity="center_horizontal"
            android:maxLines="1"
            android:shadowColor="@android:color/black"
            android:shadowRadius="20"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/fullscreen_secondary_line_color" />

        <LinearLayout
            android:layout_below="@id/line3"
            android:id="@+id/favorites_btn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <ImageButton
                android:id="@+id/favourite_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_star_border_white_24dp"
                android:background="@android:color/transparent"
                android:scaleType="centerCrop"
                android:padding="@dimen/image_btn_padding"/>

            <Button
                android:id="@+id/my_favorites_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:background="@android:color/transparent"
                android:text="@string/my_favorites"
                android:textColor="@color/white"
                android:drawableStart="@drawable/ic_baseline_open_in_new_24"
                android:padding="5dp"
                android:visibility="gone"/>
        </LinearLayout>

    </RelativeLayout>

    <ProgressBar
        android:id="@+id/progressBarMediaLoading"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/fullscreen_toolbar_bg_gradient"
        android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    <!--    todo remove wrapper-->
    <RelativeLayout
        android:id="@+id/ads_container_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true">

        <RelativeLayout
            android:id="@+id/ads_container"
            android:layout_width="match_parent"
            android:layout_height="50dp" />
    </RelativeLayout>
</RelativeLayout>
