<?xml version="1.0" encoding="utf-8"?><!--
  Copyright (C) 2014 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->

<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:activity=".ui.about_activity.AboutActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/toolabar_layout"
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_height="?attr/actionBarSize"
            android:layout_width="match_parent"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_scrollFlags="scroll|enterAlways"/>

        </android.support.design.widget.AppBarLayout>

        <ScrollView
            android:id="@+id/scroll_view"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_above="@id/controls_container"
            android:layout_below="@id/toolabar_layout"
            android:layout_margin="10dp">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/common_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="3dp"
                    card_view:cardCornerRadius="@dimen/cardview_default_radius">

                    <LinearLayout
                        android:id="@+id/common_layout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="9dp">

                        <TextView
                            android:id="@+id/appName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="3dp"
                            android:clickable="false"
                            android:focusable="false"
                            android:focusableInTouchMode="false"
                            android:textColor="@color/colorPrimary"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            tools:text="preview" />

                        <TextView
                            android:id="@+id/developer"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="3dp"
                            android:clickable="false"
                            android:focusable="false"
                            android:focusableInTouchMode="false"
                            android:textColor="@android:color/black"
                            android:textSize="18sp"
                            tools:text="preview" />

                        <TextView
                            android:id="@+id/email"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="3dp"
                            android:clickable="true"
                            android:focusable="true"
                            android:focusableInTouchMode="false"
                            android:textColor="@color/colorAccent"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            tools:text="preview" />

                        <TextView
                            android:id="@+id/version"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="3dp"
                            android:clickable="false"
                            android:focusable="false"
                            android:focusableInTouchMode="false"
                            android:textColor="@android:color/black"
                            android:textSize="18sp"
                            tools:text="preview" />

                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/privacy_policy_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="3dp"
                    card_view:cardCornerRadius="@dimen/cardview_default_radius">

                    <LinearLayout
                        android:id="@+id/privacy_policy_layout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="9dp">

                        <TextView
                            android:id="@+id/privacy_policy_header"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="3dp"
                            android:layout_marginTop="26dp"
                            android:clickable="false"
                            android:focusable="false"
                            android:focusableInTouchMode="false"
                            android:text="@string/privacy_policy_agreement"
                            android:textColor="@color/colorPrimary"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/privacy_policy"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="3dp"
                            android:clickable="false"
                            android:focusable="false"
                            android:focusableInTouchMode="false"
                            android:text="@string/privacy_policy_explanation"
                            android:textColor="@android:color/black"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/privacy_policy_link"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="3dp"
                            android:clickable="false"
                            android:focusable="false"
                            android:focusableInTouchMode="false"
                            android:textColor="@color/colorAccent"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            tools:text="preview" />
                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/contact_me_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="3dp"
                    card_view:cardCornerRadius="@dimen/cardview_default_radius">

                    <LinearLayout
                        android:id="@+id/contact_me_layout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="9dp">

                        <TextView
                            android:id="@+id/contact_me"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="3dp"
                            android:clickable="false"
                            android:focusable="false"
                            android:focusableInTouchMode="false"
                            android:text="@string/contact_me"
                            android:textColor="@android:color/black"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/email2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="3dp"
                            android:clickable="true"
                            android:focusable="true"
                            android:focusableInTouchMode="false"
                            android:textColor="@color/colorAccent"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            tools:text="preview" />

                    </LinearLayout>
                </android.support.v7.widget.CardView>

            </LinearLayout>
        </ScrollView>

        <android.support.v7.widget.CardView
            android:id="@+id/controls_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            app:cardElevation="8dp">

            <fragment android:name="com.ashomok.lullabies.ui.PlaybackControlsFragment"
                android:id="@+id/fragment_playback_controls"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                tools:layout="@layout/fragment_playback_controls" />

        </android.support.v7.widget.CardView>

    </RelativeLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/drawer_actions" />

</android.support.v4.widget.DrawerLayout>
